--- a/frontend/index.html
+++ b/frontend/index.html
@@ -190,8 +190,10 @@
 
 
 
-  <!-- ======================= FEATURE SLIDES ======================= -->
+<!-- ======================= FEATURE SLIDES ======================= -->
 <section class="features-slideshow">
+
+  <!-- ===== Slide 1 ===== -->
   <div class="slide active" style="--bg-color:#0D4F2B;">
     <div class="slide-left">
       <h4 class="section-subtitle">FEATURES</h4>
@@ -204,18 +206,18 @@
     </div>
   </div>
 
+  <!-- ===== Slide 2 ===== -->
   <div class="slide" style="--bg-color:#8C331C;">
     <div class="slide-left">
       <img src="assests/feature2a.jpg" alt="Feature image">
-    <p class="slide-desc">
-  <ul class="feature-points">
-    <li>Highlights the most common and meaningful words in your text.</li>
-    <li>Helps identify which ideas or terms appear most often.</li>
-    <li>Shows whether your focus matches your intended topic.</li>
-    <li><strong>Chart Type:</strong> Bar chart displaying word frequency.</li>
-  </ul>
-</p>
-
+      <div class="slide-desc">
+        <ul class="feature-points">
+          <li>Highlights the most common and meaningful words in your text.</li>
+          <li>Helps identify which ideas or terms appear most often.</li>
+          <li>Shows whether your focus matches your intended topic.</li>
+          <li><strong>Chart Type:</strong> Bar chart displaying word frequency.</li>
+        </ul>
+      </div>
     </div>
     <div class="slide-right">
       <p class="slide-num">#1</p>
@@ -224,6 +226,7 @@
     </div>
   </div>
 
+  <!-- ===== Slide 3 ===== -->
   <div class="slide" style="--bg-color:#0A2E5A;">
     <div class="slide-left">
       <p class="slide-num">#2</p>
@@ -232,30 +235,29 @@
     </div>
     <div class="slide-right">
       <img src="assests/feature3b.jpg" alt="Feature image">
-<p class="slide-desc">
-  <ul class="feature-points">
-    <li>Groups related words into visual clusters based on meaning.</li>
-    <li>Each bubble represents a recurring theme in your writing.</li>
-    <li>Helps you see the main subjects and their relationships.</li>
-    <li><strong>Chart Type:</strong> Bubble chart showing thematic clusters.</li>
-  </ul>
-</p>
-
+      <div class="slide-desc">
+        <ul class="feature-points">
+          <li>Groups related words into visual clusters based on meaning.</li>
+          <li>Each bubble represents a recurring theme in your writing.</li>
+          <li>Helps you see the main subjects and their relationships.</li>
+          <li><strong>Chart Type:</strong> Bubble chart showing thematic clusters.</li>
+        </ul>
+      </div>
     </div>
   </div>
 
+  <!-- ===== Slide 4 ===== -->
   <div class="slide" style="--bg-color:#8C331C;">
     <div class="slide-left">
       <img src="assests/feature4a.jpg" alt="Feature image">
-<p class="slide-desc">
-  <ul class="feature-points">
-    <li>Reveals the emotional tone of your text as positive, neutral, or negative.</li>
-    <li>Helps you understand your message’s emotional balance.</li>
-    <li>Useful for adjusting tone to match your intent.</li>
-    <li><strong>Chart Type:</strong> Doughnut chart showing sentiment distribution.</li>
-  </ul>
-</p>
-
+      <div class="slide-desc">
+        <ul class="feature-points">
+          <li>Reveals the emotional tone of your text as positive, neutral, or negative.</li>
+          <li>Helps you understand your message’s emotional balance.</li>
+          <li>Useful for adjusting tone to match your intent.</li>
+          <li><strong>Chart Type:</strong> Doughnut chart showing sentiment distribution.</li>
+        </ul>
+      </div>
     </div>
     <div class="slide-right">
       <p class="slide-num">#3</p>
@@ -264,6 +266,7 @@
     </div>
   </div>
 
+  <!-- ===== Slide 5 ===== -->
   <div class="slide" style="--bg-color:#0A2E5A;">
     <div class="slide-left">
       <p class="slide-num">#4</p>
@@ -272,17 +275,19 @@
     </div>
     <div class="slide-right">
       <img src="assests/feature5b.jpg" alt="Feature image">
-<p class="slide-desc">
-  <ul class="feature-points">
-    <li>Reveals the emotional tone of your text as positive, neutral, or negative.</li>
-    <li>Helps you understand your message’s emotional balance.</li>
-    <li>Useful for adjusting tone to match your intent.</li>
-    <li><strong>Chart Type:</strong> Doughnut chart showing sentiment distribution.</li>
-  </ul>
-</p>
-
+      <div class="slide-desc">
+        <ul class="feature-points">
+          <li>Reveals the emotional tone of your text as positive, neutral, or negative.</li>
+          <li>Helps you understand your message’s emotional balance.</li>
+          <li>Useful for adjusting tone to match your intent.</li>
+          <li><strong>Chart Type:</strong> Doughnut chart showing sentiment distribution.</li>
+        </ul>
+      </div>
     </div>
   </div>
+
+</section>
+
 
   <button class="nav prev">&#10094;</button>
   <button class="nav next">&#10095;</button>
