--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -280,23 +280,23 @@
 /* Blurred Popup Box */
 .popup-box {
   position: relative;
-  backdrop-filter: blur(14px); /* blur INSIDE box */
-  background: rgba(255, 255, 255, 0.55);
-  border: 2px solid rgba(255,255,255,0.4);
+  background: linear-gradient(135deg, rgba(255,255,255,0.25), rgba(255,255,255,0.12));
+  backdrop-filter: blur(25px) saturate(180%);
+  background: rgba(255, 255, 255, 0.25);
   border-radius: 24px;
-  padding: 32px 28px 38px;
-  box-shadow: 0 12px 32px rgba(0, 0, 0, 0.25);
+  padding: 48px 36px 50px;
+  box-shadow: 0 16px 40px rgba(0, 0, 0, 0.35);
   text-align: center;
-  max-width: 520px;
+  max-width: 680px;
   width: 92%;
-  animation: popIn .4s ease-out;
+  animation: popIn .45s ease-out;
 }
 
 /* Title */
 .popup-box h2 {
-  font-family: "Rockwell", "Courier New", serif;
-  font-size: 28px;
-  color: var(--blue, #0a60a8);
+  font-family: "Droid Serif", serif;
+  font-size: 30px;
+  color: var(--teal);
   text-shadow: 0 1px 4px rgba(0,0,0,.1);
   margin-top: 0;
   margin-bottom: 18px;
@@ -397,27 +397,35 @@
   50% { transform: scale(1.05); box-shadow: 0 6px 18px rgba(255,255,255,.25); }
 }
 
-/* Mobile Optimization */
-@media (max-width: 480px) {
+@media (max-width: 600px) {
   .popup-box {
-    max-width: 90%;
-    padding: 22px 16px 28px;
+    max-width: 94%;
+    padding: 28px 18px 32px;
+    border-radius: 22px;
+    backdrop-filter: blur(18px) saturate(150%);
+    background: rgba(255,255,255,0.22);
   }
+
   .popup-box h2 {
     font-size: 22px;
+    margin-bottom: 14px;
   }
+
+  .popup-img {
+    max-width: 300px;
+    margin-bottom: 16px;
+  }
+
+  .popup-btn {
+    width: 80%;
+    font-size: 0.95rem;
+    padding: 10px 0;
+  }
+
   .popup-close {
     font-size: 24px;
     top: 8px;
     right: 12px;
-  }
-  .popup-img {
-    max-width: 320px;
-    margin-bottom: 18px;
-  }
-  .popup-btn {
-    font-size: 0.95rem;
-    padding: 9px 20px;
   }
 }
 
