--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -672,6 +672,7 @@
   })();
 
    /* ---------- First Comer Popup ---------- */
+/* Remove the first-comer popup functionality */
 (function popupInit(){
   const popup = document.getElementById('welcomePopup');
   const closeBtn = popup.querySelector('.popup-close');
