--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -525,13 +525,13 @@
   </main>
 
 
-<!-- ======================= FIRST-COMER POPUP ======================= -->
+<!-- ======================= POPUP ======================= -->
 <div id="welcomePopup" class="popup-overlay">
   <div class="popup-box">
-    <button class="popup-close" aria-label="Close">&times;</button>
-       <h2>See Ink Insights in Action!</h2>
-    <img src="assests/WebAppProcess.gif" alt="Ink Insights process animation" class="popup-img" />
-    <button class="popup-btn">Let's Get Started</button>
+    <button class="popup-close">&times;</button>
+    <h2>Welcome to Ink Insights!</h2>
+    <img src="assests/WebAppProcess.gif" alt="Ink Insights Process Animation" class="popup-img" />
+    <button class="popup-btn">Let's Start</button>
   </div>
 </div>
 
