--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -430,7 +430,7 @@
 }
 
 /* ======================= Animated Heading ======================= */
-h2 {
+.popup-box h2 {
   font-family: "Droid Serif", serif;
   font-weight: 700;
   font-size: 64px;
