--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -429,7 +429,7 @@
   }
 }
 
-/* ======================= Animated Heading ======================= */
+/* ======================= Animated Heading in Popup ======================= */
 .popup-box h2 {
   font-family: "Droid Serif", serif;
   font-weight: 700;
@@ -449,27 +449,30 @@
 
 /* Underline animation for h2 */
 @keyframes underline {
-  0% { width: 0; }
-  100% { width: 100%; }
+  0% { transform: scaleX(0); }
+  100% { transform: scaleX(1); }
 }
 
 /* Underline style */
-h2::after {
+.popup-box h2::after {
   content: "";
   display: block;
   position: absolute;
   bottom: -10px;
   left: 0;
-  width: 0%;
+  width: 100%; /* Full width of the h2 */
   height: 4px;
   background-color: var(--accent-green, #609d9f); /* Custom color for underline */
-  transition: width 0.3s ease; /* Smooth transition */
+  transform-origin: left center; /* Makes the animation scale from the left */
+  transform: scaleX(0); /* Initially invisible */
+  transition: transform 0.3s ease; /* Smooth transition */
 }
 
-/* Add animation delay and smooth transition to the line */
-h2:hover::after {
-  width: 100%;
+/* Hover effect for underline */
+.popup-box h2:hover::after {
+  transform: scaleX(1); /* Expands the underline */
 }
+
 
 
 </style>
